# attestation-service

./: Cargo.toml
.github/workflows/: basic.yml  release.yml
attestation-service/: Cargo.toml
attestation-service/src/verifier/: mod.rs
rvps/: Cargo.toml
rvps/src/extractors/extractor_modules/in_toto/: mod.rs
