[workspace]
members = [
    "as-types",
    "attestation-service",
    "bin/rvps",
    "bin/grpc-as",
    "bin/rvps-client",
]

[workspace.package]
version = "0.1.0"
authors = ["The Confidential Container Authors"]
description = "Attestation Service"
documentation = "https://github.com/confidential-containers/attestation-service"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.31"
chrono = { git = "https://github.com/chronotope/chrono", rev = "2639222" }
clap = { version = "3.2.6", features = ["derive"] }
env_logger = "0.9.1"
futures-task = ">=0.3.28"
futures-util = ">=0.3.28"
git2 = ">=0.17.0"
hyper = ">=0.14.25"
log = "0.4.17"
prost = ">=0.11.0"
regex = ">=1.7.0"
rstest = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
serial_test = "0.9.0"
sha2 = "0.10"
shadow-rs = { git = "https://github.com/baoyachi/shadow-rs.git", rev = "d1f4096" }
tokio = { version = ">=1.28.1", features = ["rt-multi-thread", "macros", "fs"] }
tonic = "0.8.1"
tonic-build = "0.8.0"
